# testcontainers-minidfs-rs

./: Cargo.toml  README.md  libhdfs3-hdfs-client.xml
.github/workflows/: basic.yml
src/: lib.rs
tests/: e2e.rs  minidfs.rs
