[package]
name = "testcontainers-minidfs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
testcontainers = "0.14"


[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1.15", features = ["rt", "macros", "time"]}
hdfs-native = { git = "https://github.com/milenkovicm/hdfs-native.git"}