[package]
name = "testcontainers-minidfs-rs"
version = "0.2.0"
edition = "2021"

license = "MIT"
description = "HDFS Test Container"
homepage = "https://github.com/milenkovicm/testcontainers-minidfs-rs"
repository = "https://github.com/milenkovicm/testcontainers-minidfs-rs"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["testcontainers", "testing", "hdfs", "hsdoop", "integration-testing"]

[dependencies]
log = "0.4"
testcontainers = "0.15"
project-root = "0.2"

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["rt", "macros", "time"]}
serial_test = { version = "2.0"}