[package]
name = "testcontainers-minidfs-rs"
version = "0.5.0"
edition = "2021"

license = "MIT"
description = "Opinionated single node HDFS cluster captured in a testcontainer."
homepage = "https://github.com/milenkovicm/testcontainers-minidfs-rs"
repository = "https://github.com/milenkovicm/testcontainers-minidfs-rs"
readme = "README.md"
categories = ["development-tools::testing"]
keywords = ["testcontainers", "testing", "hdfs", "hsdoop", "integration-testing"]

[dependencies]
log = "0.4"
testcontainers = "^0.26"
project-root = "0.2"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "sync"] }
serial_test = { version = "3.1" }
hdfs-native = { version = "0.13" }
ctor = { version = "0.6" }